# gtimetable

./: .env.example  .gitignore  README.md  config.py  example_timetable.xlsx  gcalendar.py  main.py  pyproject.toml  requirements.txt  timetable.py  timetable.xlsx  xlsx_parser.py
src/: config.py  icscal.py  primarycalendar.py  timetable.py  type_hints.py  xlsx_parser.py
