[tool.poetry]
name = "gtimetable"
version = "0.1.0"
description = ""
authors = ["MargoRSq <slava1kvartovkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gcsa = "^1.3.0"
Pebble = "^4.6.3"
openpyxl = "^3.0.9"
starlette = "^0.17.1"
ics = "^0.7.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
